--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply bg-stone-800 text-white font-montserrat;
+  @apply bg-neutral-800 text-white font-montserrat;
 }
