--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply scroll-smooth;
+}
+
 body {
   @apply bg-neutral-800 text-white font-montserrat;
 }
